# indefinite

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml  pull-request.yml
src/: helper.rs  irregular.rs  lib.rs  macros.rs  methods.rs
src/rules/: acronym.rs  mod.rs  number.rs  other.rs
